...

    <!-- Legal -->
    <string name="accept_all_and_continue">Accept All &amp; Continue</string>
    <string name="community_standards">Community Standards</string>
    <string name="cyber_bullying_policy">Cyber Bullying Policy</string>
    <string name="i_have_read_and_agree">I have read and agree to the </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="review_and_accept_policies">Please review and accept our policies to continue.</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="welcome_to_shytalk">Welcome to ShyTalk</string>

    <!-- Auth -->
    <string name="sign_in">Sign In</string>
...
